# pymoney

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: accounts.example.yaml  asset_classes.yaml  budget.example.yaml  budget.yaml  categories.example.yaml  categories.yaml  labels.example.yaml
notebooks/: drilldown.py  investments.py  monthly_review.py  subscriptions.py
pymoney/: __init__.py  accounts.py  budget.py  cli.py  db.py  labels.py  migrate.py  subscriptions.py  tx.py
pymoney/categorize/: __init__.py  rules.py
pymoney/ingest/: __init__.py  brokerage.py  coinbase.py  fidelity.py  tiller.py
pymoney/reports/: __init__.py  investments.py  net_worth.py  spending.py
scripts/: check-no-data.sh
sql/: schema.sql  transactions.sql
tests/: conftest.py  test_categorize.py  test_db.py  test_ingest_brokerage.py  test_ingest_fidelity.py  test_ingest_tiller.py  test_reports.py
